--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 DATABASE_URL=mongodb+srv://infopravascs:kO3mlVA8KWz7fkl8@cluster0.zhilbne.mongodb.net/imageaipro?retryWrites=true&w=majority&appName=Cluster0
+
+GOOGLE_CLIENT_ID=29805601641-uooanrjnodbqamacboeu6t30gaug2103.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+GITHUB_ID=b99503476c8b8fe4111e
+GITHUB_SECRET=ae7fd4192e8cf3ce2fb19b92c01e41c3398580a4
+
+NEXTAUTH_SECRET="WELCOMETOIMAGEAIPROMAKEYOURIAMGEPRO"
