--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ GITHUB_ID=b99503476c8b8fe4111e
 GITHUB_SECRET=ae7fd4192e8cf3ce2fb19b92c01e41c3398580a4
 
 NEXTAUTH_SECRET="WELCOMETOIMAGEAIPROMAKEYOURIAMGEPRO"
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dxhaelva2
+CLOUDINARY_API_KEY=256899343429424
+CLOUDINARY_API_SECRET=wVRrU4BrGxk8Izjo_lm_g0CT554
