--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "lucide-react": "^0.368.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "next": "14.2.1",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.5.1",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
